2013-03-22  Jiyoun Park (Jypark)

    * Ecore_x: fix alpha set function not clear sync counter

2013-03-22  Cedric Bail

	* Edje: Add spread width and height in TABLE part.

2013-03-20  Jérémy Zurcher (jeyzu)

        * Eina: Add eina_list_shuffle

2013-03-19  Mike Blumenkrantz

        * Fix magic failure in eina_value_array_count when array has not been allocated

2013-03-16  Cedric Bail

	* Remove Glew and Direct3d code from Ecore_Evas module.
	* Add Eina_Log integration for Systemd journal.

2013-03-15  Carsten Haitzler (The Rasterman)

        * Fix opengl-es 2.0 engine support to only use GL_UNPACK_ROW_LENGTH
        if the correct gles extension exists.

2013-03-14  Mike Blumenkrantz

        * fix use of ecore_con_*_flush functions with unconnected objects
        * fix setting of write flags on ecore-con servers during connect

2013-03-13  Cedric Bail

	* Edje: use Eina_Cow to reduce memory usage.

2013-03-12  Jiyoun Park (Jypark)

        * Ecore_x: fix bug not check data value when get deiconify message

2013-03-11  Mike Blumenkrantz

        * clean up gnutls session initialization

2013-03-10  Cedric Bail

	* Eeze: add a dummy implementation of libmount when it is not available.
	* Ecore_Con: add systemd socket activation support (ECORE_CON_SOCKET_ACTIVATE).
	* Ecore: notify systemd that we are ready as soon as the main loop is running.
	* EFL: use HAVE_FCNTL to disable code using fcntl.

2013-03-08  Igor Murzov

        * Add WebP image saver.

2013-03-07  Jiyoun Park (Jypark)

        * Ecore_x: Add manual render code before deiconify

2013-03-06  Jihoon Kim (jihoon)

        * Edje entry: fix bug scroll works when PgDn, PgUp, Home, End key in entry is pressed in preedit state


2013-03-05  Jiyoun Park (Jypark)

        * Ecore_x: Add atom related with indicator type.
		It can support several types of indicator

2013-03-05  Jiyoun Park (Jypark)

        * Ecore_x: Fix dangling pointer problem related with shmget fail

2013-03-04  Sung W. Park (sung_)