@@ -1,6 +1,10 @@
+2013-03-25  Cedric Bail
+
+	* Eina: add portable eina_file_mkstemp().
+
 2013-03-22  Jiyoun Park (Jypark)
 
-    * Ecore_x: fix alpha set function not clear sync counter
+	* Ecore_x: fix alpha set function not clear sync counter
 
 2013-03-22  Cedric Bail
 
